Fix text alignment for content layout

--- a/design-system.css
+++ b/design-system.css
@@ -4,7 +4,6 @@
 {
   display: flex;
   justify-content: space-between;
-  align-items: center;
  
 }
 
@@ -46,6 +45,7 @@
 .content-layout
 {
   display: flex;
+  text-align: start;
 }
 
 .color-swatches {
